<?xml version="1.0"?>
<package format="2">
  <name>an_path_planning</name>
  <version>0.0.0</version>
  <description>The an_path_planning package</description>

  <maintainer email="andre@todo.todo">andre</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
