<?xml version="1.0"?>
<package format="2">
  <name>an_path_planning</name>
  <version>0.0.0</version>
  <description>The an_path_planning package</description>

  <maintainer email="andre-phu-van.nguyen@polymtl.ca">Andre Phu-Van Nguyen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
</package>
